# mesh

./: .gitignore  README.md  dagster.yaml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: continuous-integration.yml
data/dagster_home/: .gitignore
jobs/: files
mesh/: __init__.py  assets.py  definitions.py  find_releases.py  jobs.py  paths.py  transform_release_graph_to_interchange_models.py  transform_thesaurus_to_interchange_models.py
mesh/models/: __init__.py  category.py  concept.py  descriptor.py  release.py  release_graph.py  term.py  thesaurus.py  tree_number.py
mesh/namespaces/: __init__.py  meshv.py
script/: clean  dagster-dev  format  poetry-lock  test
tests/mesh_test/: assets_test.py  conftest.py  transform_thesaurus_to_interchange_models_test.py
