[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]

[tool.poetry]
authors = ["Minor Gordon <minorg@server.fake>"]
description = ""
license = "Apache-2.0"
name = "mesh"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"
pytest = "^8.0.1"
ruff = "^0.2.2"
dagster-webserver = "^1.6.5"
graphs2go = "1.0.0"
isort = "^5.13.2"

[tool.ruff]
src = ["mesh"]
